# elevate-ai-api

./: .coveragerc  .gitignore  E2E_TESTING_README.md  GRANULAR_EDITING_README.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_WORKFLOW_README.md  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  README_REAL_LLM_TESTS.md  SEQUENTIAL_WORKFLOW_README.md  TEST_ORGANIZATION.md  TEST_SUITE_README.md  TEST_SUITE_SUMMARY.md  UPDATED_SYSTEM_README.md  compare_indexing_behavior.py  complete_workflow_results_20250815_161857.json  complete_workflow_results_20250815_162348.json  complete_workflow_results_20250815_162530.json  complete_workflow_results_20250815_162703.json  complete_workflow_results_20250815_162855.json  complete_workflow_results_20250815_162951.json  complete_workflow_results_20250815_163353.json  complete_workflow_results_20250815_163914.json  complete_workflow_results_20250815_164417.json  complete_workflow_results_20250815_164825.json  content_test_results_20250815_160553.json  coverage.json  create_readable_blueprint.py  debug_blueprint_parser.py  debug_database_content.py  debug_vector_storage_simple.py  demo_granular_editing.py  demo_rag_chat.py  demo_sequential_workflow.py  demo_updated_system.py  env.example  extract_blueprint_content.py  generate_comprehensive_output.py  langchain_comprehensive_test_results.json  (+65 more)
app/: main.py
deconstructions/: deconstruction_01_photosynthesis_basic.json  deconstruction_02_multiple_sections.json  deconstruction_03_simple_text.json  deconstruction_04_science_photosynthesis.json  deconstruction_05_photosynthesis_detailed.json  deconstruction_06_photosynthesis_comprehensive.json  deconstruction_07_chemistry_basics.json  deconstruction_08_programming_python.json
docs/: ai-api-comprehensive-functionality-overview.md  blueprint-editing-service-overview.md  comprehensive-overview-13-08.md  diary.md  sprint53-implementation-summary.md  sprint_template.md  streaming-chat-implementation.md
elevate-ai-service/: .env  .env.example  README.md  app.py  requirements.txt  test_chat.py  test_chat_endpoint.py  test_core_api_integration.py  test_evaluate_answer.py  test_evaluate_answer_endpoint.py  test_generate_questions.py  test_generate_questions_endpoint.py  verify_api_key.py
logs/: llm_usage.json
question_sets/: questions_deconstruction_01_photosynthesis_basic.json  questions_deconstruction_02_multiple_sections.json  questions_deconstruction_03_simple_text.json  questions_deconstruction_04_science_photosynthesis.json  questions_deconstruction_05_photosynthesis_detailed.json  questions_deconstruction_07_chemistry_basics.json  (+2 more)
(+303 files in other folders)
