[tool.poetry]
name = "elevate-ai-api"
version = "0.1.0"
description = "AI-powered learning co-pilot API"
authors = ["Antonio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"
openai = "^1.93.0"
google-generativeai = "^0.8.5"
rich = "^14.0.0"
# Vector Database Dependencies
pinecone = "^3.0.0"
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"
numpy = "<2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.0"
pytest-xdist = "^3.6.0"
pytest-benchmark = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "--html=test_reports/report.html",
    "--self-contained-html",
    "-v",
    "--tb=short"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
